# eudi-srv-web-issuing-eudiw-py

./: .gitignore  Dockerfile  flake.nix  pyproject.toml
.github/workflows/: deploy.yml  gitleaks.yml  sonar.yml
app/: __init__.py  boot_validate.py  data_management.py  dynamic_func.py  formatter_func.py  lighttoken.py  misc.py  pid_func.py  preauthorization.py  requirements.txt  route_dynamic.py  route_eidasnode.py  route_formatter.py  route_oid4vp.py  route_oidc.py  test_case_helper.py  validate.py  validate_vp_token.py
app/app_config/: config_countries.py  config_oidc_endpoints.py  config_secrets.py  config_service.py  oid_config.py
app/metadata_config/: __init__.py  metadata.py  metadata_config.json  openid-configuration.json  openid_configuration.py
app/metadata_config/credentials_supported/: photo_id_mdoc.json  pid_jwt_vc_json.json  pid_mdoc.json
app/private/: cookie_jwks.json
app/static/css/stylesheets/custom/: custom_en_9.7.1.20.1679559965505.css
app/templates/dynamic/: dynamic-countries.html  mdl-test-case-form.html  pid-test-case-form.html
app/templates/misc/: initial_page.html
app/test_cases/: helper.py
app/test_cases/lt/: __init__.py
app/test_cases/lt/mdl/: routes.py  test_cases.py
app/test_cases/lt/pid/: routes.py  test_cases.py
pid-issuer/cert/: PID-DS-0001_LT_DEV.cert.der
pid-issuer/privkey/: MDL-DS-0001_LT_DEV.key.pem  PID-DS-0001_LT_DEV.key.pem
